--- a/common-assignment.css
+++ b/common-assignment.css
@@ -5,14 +5,43 @@ body {
   line-height: 1.75;
 }
 
+.container {
+  max-width: 1280px;
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 90%;
+}
+
+.spacer {
+  padding: 5rem 0;
+}
+
 h1,
 h2,
 .title {
   font-family: 'europa', 'Helvetica', 'Arial', sans-serif;
 }
 
+h1 {
+  padding: 3em 0;
+  font-size: 8rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 5rem;
+  padding-bottom: 3rem;
+}
+
 section {
-  padding: 4rem 0;
+  padding: 10rem 0;
+}
+
+p {
+  display: block;
+  width: 100%;
 }
 
 .intro {
@@ -31,6 +60,7 @@ section {
   font-size: 1.2rem;
   text-align: right;
   justify-content: flex-end;
+  margin-bottom: 10rem;
 }
 .navbar ul {
   list-style-type: none;
@@ -56,17 +86,22 @@ section {
   border-bottom: 2px white solid;
 }
 
-.stuff1 {
+.about {
+  background-color: #333;
+}
+
+.services {
+  background-color: #0066ff;
+}
+
+.plans {
   background-color: #fff;
-  height: 600px;
 }
 
-.stuff2 {
-  background-color: #ff6600;
-  height: 600px;
+.contact {
+  background-color: #aaa;
 }
 
-.stuff3 {
-  background-color: white;
-  height: 600px;
+.footer {
+  background-color: #555;
 }
