--- a/common-assignment.css
+++ b/common-assignment.css
@@ -62,14 +62,22 @@ p {
   justify-content: flex-end;
   margin-bottom: 10rem;
 }
+@media (max-width: 650px) {
+  .navbar {
+    text-align: left;
+  }
+}
 .navbar ul {
   list-style-type: none;
   margin: auto auto;
+  white-space: nowrap;
 }
 .navbar li {
   display: inline-block;
-  padding: 4rem 1rem;
+  padding: 0;
   vertical-align: middle;
+  position: relative;
+  margin: 3.5rem 1rem;
 }
 .navbar a {
   color: white;
@@ -77,13 +85,19 @@ p {
   text-decoration: none;
   text-transform: uppercase;
 }
-.navbar span:active {
-  padding-bottom: 5px;
-  border-bottom: 2px white solid;
+.navbar span {
+  position: absolute;
+  background: #fff;
+  width: 0%;
+  height: 2px;
+  left: 0;
+  bottom: 0;
+  -webkit-transition: width 0.5s;
+     -moz-transition: width 0.5s;
+          transition: width 0.5s;
 }
-.navbar span:hover {
-  padding-bottom: 5px;
-  border-bottom: 2px white solid;
+.navbar a:hover ~ span {
+  width: 100%;
 }
 
 .about {
