Change red color
Make it pop!

--- a/common-assignment.css
+++ b/common-assignment.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: #bc2929;
+  background-color: #cc0000;
   color: #fff;
   font-family: 'source-code-pro', sans-serif;
   line-height: 1.75;
@@ -54,7 +54,7 @@ p {
 }
 
 .intro {
-  background-color: #bc2929;
+  background-color: #cc0000;
 }
 
 .title {
