--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -173,14 +173,15 @@ p {
   }
 
   .buy {
-    position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
     color: #fff;
+    cursor: pointer;
     font-family: 'source-code-pro', sans-serif;
+    left: 0;
     margin-top: 1rem;
     padding: 1rem 0;
+    position: absolute;
+    right: 0;
     text-align: center;
     text-transform: uppercase;
   }
@@ -278,7 +279,7 @@ footer .footer-row {
 footer .one,
 footer .two,
 footer .three {
-  display: table-cell; 
+  display: table-cell;
   vertical-align: middle;
 }
 footer .two,
@@ -297,7 +298,7 @@ footer ul li {
   display: inline-block;
   margin: 0;
 }
-footer i.fa {    
+footer i.fa {
   background-color: #333;
   color: #666;
   height: 23px;
