Add smooth scroll between sections

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -17,19 +17,19 @@
       <div class="navbar six columns">
         <ul>
           <li>
-            <a href="#">About</a>
+            <a data-scroll href="#about">About</a>
             <span></span>
           </li>
           <li>
-            <a href="#">Services</a>
+            <a data-scroll href="#services">Services</a>
             <span></span>
           </li>
           <li>
-            <a href="#">Pricing</a>
+            <a data-scroll href="#pricing">Pricing</a>
             <span></span>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a data-scroll href="#contact">Contact</a>
             <span></span>
           </li>
         </ul>
@@ -39,7 +39,7 @@
       <h1>We design, develop and deliver software for the web.</h1>
     </div>
   </section>
-  <section class="about">
+  <section id="about" class="about">
     <div class="container">
       <div class="row">
         <h2 class="u-pull-right right">A different kind of technical consulting firm</h2>
@@ -59,7 +59,7 @@
       </div>
     </div>
   </section>
-  <section class="services">
+  <section id="services" class="services">
     <div class="container">
       <div class="row">
         <h2>Services we offer</h2>
@@ -75,7 +75,7 @@
       </div>
     </div>
   </section>
-  <section class="plans">
+  <section id="pricing" class="plans">
     <div class="container">
       <div class="row">
         <h2 class="center">Pricing</h2>
@@ -157,7 +157,7 @@
       </div>
     </div>
   </section>
-  <section class="contact">
+  <section id="contact" class="contact">
     <div class="container">
       <div class="row">
         <h2 class="center">Get in touch</h2>
