--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -34,6 +34,10 @@ h3 {
   text-transform: uppercase;
 }
 
+h4 {
+  font-family: 'source-code-pro', sans-serif;
+}
+
 section {
   padding: 10rem 0;
 }
