--- a/client/views/privacy-modal.html
+++ b/client/views/privacy-modal.html
@@ -11,7 +11,7 @@
 
                 <div class="modal-body">
                   <p>
-                    This privacy policy discloses the privacy practices for (website address). This privacy policy applies solely to information collected by this web site. It will notify you of the following:
+                    This privacy policy discloses the privacy practices for Common Engineering. This privacy policy applies solely to information collected by this web site. It will notify you of the following:
                   </p>
                   <ol>
                     <li>What personally identifiable information is collected from you through the web site, how it is used and with whom it may be shared.</li>
