--- a/client/views/hosting-modal.html
+++ b/client/views/hosting-modal.html
@@ -1,11 +1,11 @@
-<template name="privacyModal">
+<template name="hostingModal">
   <div class="modal fade">
     <div class="modal-dialog">
       <div class="modal-content">
 
         <div class="modal-header">
           <h4 class="modal-title">
-            Privacy Policy
+            Hosting Plan
           </h4>
         </div>
 
