--- a/client/views/essential-modal.html
+++ b/client/views/essential-modal.html
@@ -1,5 +1,5 @@
 <template name="essentialModal">
-  <div class="modal fade">
+  <div class="modal essential fade">
     <div class="modal-dialog">
       <div class="modal-content">
 
