--- a/client/views/hosting-modal.html
+++ b/client/views/hosting-modal.html
@@ -1,5 +1,5 @@
 <template name="hostingModal">
-  <div class="modal fade">
+  <div class="modal hosting fade">
     <div class="modal-dialog">
       <div class="modal-content">
 
