--- a/client/views/pro-modal.html
+++ b/client/views/pro-modal.html
@@ -1,5 +1,5 @@
 <template name="proModal">
-  <div class="modal fade">
+  <div class="modal pro fade">
     <div class="modal-dialog">
       <div class="modal-content">
 
