--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -47,28 +47,46 @@ p {
   width: 100%;
 }
 
-.scroll-btn {
+.scroll-btn i {
   position: fixed;
-  border: 2px solid #ccc;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  bottom: 70px;
+  bottom: 10px;
   right: 15px;
-  color: #aaa !important;
+  background-color: #333;
+  color: #666;
+  height: 23px;
+  width: 23px;
+  border-radius: 50%;
+  padding: 8px;
+  font-size: 2.5rem !important;
   -webkit-transition: all 0.5s;
      -moz-transition: all 0.5s;
        -o-transition: all 0.5s;
           transition: all 0.5s;
+
 }
-.scroll-btn i {
-  font-size: 3rem;
-  padding: 10px 11px;
-}
-.scroll-btn:hover {
+.scroll-btn i:hover {
   border-color: #cc0000;
   color: #fff !important;
   background-color: #cc0000;
+}
+
+
+footer i.fa {
+  background-color: #333;
+  color: #666;
+  height: 23px;
+  width: 23px;
+  border-radius: 50%;
+  padding: 8px;
+  font-size: 2.5rem !important;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+     -moz-transition: all 0.3s;
+          transition: all 0.3s;
+}
+footer i:hover {
+  background-color: #cc0000;
+  color: #fff;
 }
 
 /*          */
@@ -284,7 +302,7 @@ textarea {
 /*          */
 footer {
   background-color: #111;
-  padding: 10px 5rem;
+  padding: 10px 6.25rem;
   text-transform: uppercase;
   color: #979797;
   font-size: 1.35rem;
