--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -441,14 +441,33 @@ footer i:hover {
 .modal {
   color: #444;
 }
+.modal h4 {
+  border-bottom: 2px solid #ddd;
+  margin: 35px 0 30px;
+}
+.modal-body {
+  padding: 15px 25px;
+}
 .modal-footer button {
   color: #fff;
+  background-color: #444;
   border-width: 0;
+  -webkit-transition: all 0.5s;
+     -moz-transition: all 0.5s;
+       -o-transition: all 0.5s;
+          transition: all 0.5s;
 }
+
 * {
   box-sizing: content-box;
 }
+
 .row {
   margin-left: 0;
   margin-right: 0;
+}
+
+ul, ol {
+  list-style: decimal outside;
+  padding: 0 0 0 25px;
 }
