Remove random underline

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -184,8 +184,12 @@
         Connect with us!
       </div>
       <div class="three">
-        <i class="fa fa-twitter" href="#"></i>
-        <i class="fa fa-github-alt" href="#"></i>
+        <a href="https://twitter.com/common_eng" target="_blank">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="https://github.com/common-engineering" target="-blank">
+          <i class="fa fa-github-alt"></i>
+        </a>
       </div>
     </div>
   </footer>
