--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -467,6 +467,10 @@ footer i:hover {
   margin-right: 0;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 ul, ol {
   list-style: decimal outside;
   padding: 0 0 0 25px;
