--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -260,17 +260,41 @@ footer i:hover {
 
 .contact {
   color: #777;
-  background-color: #ddd;
+  background-color: #222;
 }
+
 
 /*          */
 /* Form     */
 /*          */
 
+form .row {
+  margin-top: 15px;
+}
+
+input[type="submit"] {
+  background-color: #cc0000;
+  border-radius: 0;
+  color: #fff;
+  border-width: 0;
+  -webkit-transition: all 0.5s;
+     -moz-transition: all 0.5s;
+       -o-transition: all 0.5s;
+          transition: all 0.5s;
+}
+input[type="submit"]:hover,
+input[type="submit"]:focus {
+  opacity: 0.75;
+  border-width: 0;
+  color: #fff;
+}
+
 input[type="text"],
 input[type="email"],
 select,
 textarea {
+  background-color: #333;
+  border-width: 0;
   border-radius: 0;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -284,6 +308,7 @@ input[type="text"]:focus,
 input[type="email"]:focus,
 select:focus,
 textarea:focus {
+  border-width: 1px;
   border-color: #cc0000;
 }
 textarea {
