--- a/client/views/index.html
+++ b/client/views/index.html
@@ -146,7 +146,7 @@
           <div class="row">
             <div class="six columns">
               <label for="exampleEmailInput">Your email</label>
-              <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+              <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput" />
             </div>
             <div class="six columns">
               <label for="exampleRecipientInput">Reason for contacting</label>
@@ -157,13 +157,19 @@
               </select>
             </div>
           </div>
-          <label for="exampleMessage" style="margin-top: 10px;">Message</label>
-          <textarea class="u-full-width" rows="10" placeholder="" id="exampleMessage"></textarea>
-          <label class="send-yourself-copy">
-            <input type="checkbox">
-            <span class="label-body">Send a copy to yourself</span>
-          </label>
-          <input class="button-primary" type="submit" value="Submit">
+          <div class="row">
+            <label for="exampleMessage">Message</label>
+            <textarea class="u-full-width" rows="10" placeholder="" id="exampleMessage"></textarea>
+          </div>
+          <div class="row">
+            <label class="send-yourself-copy">
+              <input type="checkbox" />
+              <span class="label-body">Send a copy to yourself</span>
+            </label>
+          </div>
+          <div class="row">
+            <input type="submit" value="Submit" />
+          </div>
         </form>
       </div>
     </div>
