Essential and pro information

--- a/client/views/pro-modal.html
+++ b/client/views/pro-modal.html
@@ -10,7 +10,14 @@
         </div>
 
         <div class="modal-body">
-          <p>Content goes here.</p>
+          <h4>Custom web application development</h4>
+          <p>We here at COMMON ENGINEERING specialize in the web application development. We use structured framework programming, best programming practices, and coding guidelines and standards. We want your app to be secure, scalable, and well-tested. We will pick the best software stack to bring your idea to life!</p>
+          <h4>Open source software</h4>
+          <p>We pride ourselves on our contributions to the open source community. Not only do we guarantee our clients 100% access to the source code of their project, but we also provide access to our own tools free-of-charge.</p>
+          <h4>Updates and progress via our app</h4>
+          <p>We strive for transparency during development, and through our customer portal, clients will be able to view real-time updates on their project at any hour. This information is tied to our issue tracker to provide clients with a detailed knowledge of our progress.</p>
+          <h4>Additional services available</h4>
+          <p>Some of our additional services include branding, marketing (social media campaigns, print materials, SEO), video production, and photography.</p>
         </div>
 
         <div class="modal-footer">
