--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>Common Engineering</title>
 
+  <link rel="icon" type="image/png" href="/favicon.png">
+
   <script src="https://use.typekit.net/ujm5uci.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
