Add hosting content

--- a/client/views/modals/hosting-modal.html
+++ b/client/views/modals/hosting-modal.html
@@ -8,9 +8,27 @@
             Hosting Plan
           </h3>
         </div>
-
         <div class="modal-body">
-          <p>Content goes here.</p>
+          <h4>Hosting</h4>
+          <p>Our public cloud is powered by Google Cloud, serving our own services and tools, as well as client applications.</p>
+          <p>
+            The base tier of $35 per month comes with a maxmium of:
+            <ul>
+              <li>1GB of RAM</li>
+              <li>20GB of storage</li>
+              <li>2TB of transfer</li>
+            </ul>
+          </p>
+          <h4>24/7 Monitoring</h4>
+          <p>All web applications are constantly monitored by the COMMON team 24/7. If your application stops responding, or is throwing a significant number of errors, we'll be alerted immediately and follow up with you by the following day. Additonally, status updates and issues are available within our client app.</p>
+          <h4>Next day support</h4>
+          <p>
+            We will respond to all client requests within 24 hours. If it is an emergency, we have a a phone number to reach an on-call engineer immediately (additonal charge).
+          </p>
+          <h4>Basic control panel</h4>
+          <p>Our client app also includes a control panel showing you your applications logs, current status, and work recently completed.</p>
+          <h4>Scaleable resources (extra charge)</h4>
+          <p>As your business and application grows, so do our cloud hosting options. If you need more than the base package, simply get in touch with our technical team and we'll build a custom package best suited for your needs.</p>
         </div>
 
         <div class="modal-footer">
