--- a/client/views/index.html
+++ b/client/views/index.html
@@ -21,6 +21,10 @@
             <span></span>
           </li>
           <li>
+            <a href="https://medium.com/@common_eng">Blog</a>
+            <span></span>
+          </li>
+          <li>
             <a data-scroll href="#services">Services</a>
             <span></span>
           </li>
