--- a/client/views/index.html
+++ b/client/views/index.html
@@ -84,8 +84,8 @@
         <div class="four columns">
           <div class="box essentials">
             <h3>Essential</h3>
+            <p>Web site design & development</p>
             <ul>
-              <li><span>Web design & development</span></li>
               <li><span>Open source software</span></li>
               <li><span>Updates and progress via our app</span></li>
               <li><span>Additional services available (marketing, branding)</span></li>
@@ -102,8 +102,8 @@
         <div class="four columns">
           <div class="box pro">
             <h3>Pro</h3>
+            <p>Custom web application development</p>
             <ul>
-              <li><span>Custom web application development</span></li>
               <li><span>Open source software</span></li>
               <li><span>Updates and progress via our app</span></li>
               <li><span>Additional services available (marketing, branding)</span></li>
@@ -120,6 +120,7 @@
         <div class="four columns">
           <div class="box server">
             <h3>Hosting</h3>
+            <p>24/7 Hosting and Monitoring</p>
             <ul>
               <li><span>24/7 Monitoring</span></li>
               <li><span>Next day support</span></li>
